[metadata]
name = lks-persister
version = 1.0.0
author = Erik Sargazakov
author_email = deftsly@outlook.com
description = A Python micro-service that periodically polls a Kafka topic for Avro messages, deserializes them into dataclass instances (website health-check reports), then persists the received health reports to a PostgreSQL instance
long_description = file: README.md
long_description_content_type = text/markdown
keywords = python, kafka, microservice, avro, postgresql
url = https://github.com/laksyt/lks-persister
license = MIT
license_file = LICENSE
project_urls =
    Managed Kafka/PostgreSQL = https://aiven.io
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Site Management :: Link Checking

[options]
py_modules = main
packages = find:
python_requires = >=3.9
install_requires =
    dacite == 1.6.0; python_version >= '3.6'
    dataclasses-avroschema == 0.20.2
    faker == 8.0.0; python_version >= '3.6'
    fastavro == 1.3.0; python_version >= '3.6'
    inflect == 5.3.0; python_version >= '3.6'
    kafka-python == 2.0.2
    psycopg2-binary == 2.8.6
    python-dateutil == 2.8.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
    pytz == 2021.1
    pyyaml == 5.4.1
    six == 1.15.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
    text-unidecode == 1.3

[options.entry_points]
console_scripts =
    lks-persister = main:main

[options.packages.find]
include = laksyt*
